Fix spacing on footer

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -96,8 +96,10 @@ footer {
 
 .footer-wrapper {
   position: relative;
-  padding-left: $spacing-unit/2;
-  padding-right: $spacing-unit/2;
+  /*padding-left: $spacing-unit/2;*/
+  /*padding-right: $spacing-unit/2;*/
+  /*padding-top: $spacing-unit/2;*/
+  padding: $spacing-unit/2;
   font-size: 12px;
   div {
     vertical-align: text-bottom;
@@ -111,7 +113,7 @@ footer {
   margin: 0 auto;
   width: 100%;
   border-top: 1px solid $grey-color-light;
-  padding: $spacing-unit/2;
+  /*padding: $spacing-unit/2;*/
 }
 
 .footer-heading {
